--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,17 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import { challenge1 } from '../challenges/day1';
 
 const CALENDAR = new Array(25).fill(0)
 const BASE_URL = "https://adventofcode.com/2023/day"
 
 // TODO: Fetch different images by API
 const CHRISTMAS_API = "https://img.freepik.com/free-photo/christmas-holidays-composition_658428-348.jpg?size=626&ext=jpg&ga=GA1.1.447831323.1701279307&semt=sph"
+
+const result1 = challenge1()
+console.log("result1", result1);
+
 ---
 
 <Layout title="Welcome to Advent of Code 2023">
