--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
+import Card from '../components/Card.svelte';
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 import '@fontsource/twinkle-star';
 
 const CALENDAR = new Array(25).fill(0)
@@ -20,7 +20,7 @@ const SNOWFLAKES = ["❅","❅","❅","❄", "❅","❅","❄","❄", "❅","❄
 				</div>
 			)}
 		</div>
-		<h1><span class="bg-gradient-to-r from-red-500 from-15% via-white via-40% to-emerald-500 to-80% inline-block text-transparent bg-clip-text">Welcome to Advent of Code 2023</span></h1>
+		<h1><span class="inline-block text-transparent bg-clip-text">Welcome to Advent of Code 2023</span></h1>
 		<ul role="list" class="grid justify-items-center grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6">
 			{CALENDAR.map(async (_, index) => 
 				<Card href={`${BASE_URL}/${index + 1}`} day={index + 1} image={CHRISTMAS_API} />
@@ -47,6 +47,11 @@ const SNOWFLAKES = ["❅","❅","❅","❄", "❅","❅","❄","❄", "❅","❄
 		text-align: center;
 		margin-bottom: 1em;
 		margin-top: 1em;
+	}
+
+	span {
+		background-image: linear-gradient(45deg, #FF1700, #d8d8c2,#6BCB77);
+		background-image: -webkit-linear-gradient(45deg, #FF1700, #d8d8c2,#6BCB77);
 	}
 	.snowflake {
 		color: #fff;
