feat: add snow in the card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Card from '../components/Card.svelte';
+import Card from '../components/Card.astro';
 import Layout from '../layouts/Layout.astro';
 import '@fontsource/twinkle-star';
 
