--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,61 +11,27 @@ const { href, day, image } = Astro.props;
 const DATE_OF_CHALLENGE_DAY = new Date(Date.UTC(2023, 11, day, 0, 0, 0, 0))
 const isVisibleCard = Date.now() >=  DATE_OF_CHALLENGE_DAY.getTime()
 
-// var element = document.querySelector(".door");
-// element.addEventListener("click", toggleDoor);
-
-// function toggleDoor() {
-//   element.classList.toggle("doorOpen");
-// }
 ---
 
-<!-- <div class="relative rounded-2xl p-8">
-	<div class="absolute -inset-px animate-spin-slow bg-gradient-to-r from-red-600 from-20% via-white via-40% to-emerald-500 to-80% rounded-2xl" aria-hidden="true"></div>
-	<div class="absolute inset-0 animate-spin-slow bg-zinc-900 rounded-2xl" aria-hidden="true"></div>
-	<div class="z-10 text-zinc-100">Nice border around me!</div>
-</div> -->
-
-<li class={`flex backDoor border-2 rounded-md w-28 h-28`}>
-	<div class="door">
-		{isVisibleCard ? (
-			<a href={href} class="name" style={`background-image: url(${image});`} target="_blank" rel="noopener noreferrer">
-				<span class="flex shrink-0">
-					Day {day}
-				</span>
-			</a>
-		) : (
-			<span class="name opacity-25" style={`background-image: url(${image});`}>
-				<span class="flex shrink-0">
-					Day {day}
-				</span>
-			</>
-		)}
-	</div>
+<li class={`flex border-2 rounded-md w-28 h-28`}>
+	{isVisibleCard ? (
+		<a href={href} class="name" style={`background-image: url(${image});`} target="_blank" rel="noopener noreferrer">
+			<span class="flex shrink-0">
+				Day {day}
+			</span>
+		</a>
+	) : (
+		<span class="name opacity-25" style={`background-image: url(${image});`}>
+			<span class="flex shrink-0">
+				Day {day}
+			</span>
+		</>
+	)}
 </li>
 
 <style>
 	.name {
 		@apply flex items-center justify-center w-full h-full bg-local p-8 bg-no-repeat bg-origin-border bg-cover;
-	}
-
-	.backDoor{
-		background-color: #333;
-		position:relative;
-	}
-
-	.door {
-		/* background-color: brown; */
-		top:0px;
-		left:0px;
-		
-		transform-origin: left;
-		/*Speed of the Door animation*/
-		transition: all 0.5s ease-in-out;
-	}
-
-	.doorOpen {
-		/*prespectiv creates the door open effect*/
-		transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-105deg);
 	}
 
 	li {
@@ -74,7 +40,7 @@ const isVisibleCard = Date.now() >=  DATE_OF_CHALLENGE_DAY.getTime()
 	        box-sizing:border-box;
 	text-decoration: none;
 	color: #FFF;
-	background: #5e0d0c;
+	/* background: #5e0d0c; */
 	position: relative;
 	overflow: visible; /* IE9 & 10 */
 	-webkit-transition: 500ms linear;
@@ -98,7 +64,7 @@ li::before {
 	
 }
 li:hover {
-	background: #a61715;
+	/* background: #a61715; */
 	text-shadow: 0 1px 2px rgba(0,0,0,0.75), 0 0 40px #FFF;
 	box-shadow:
 		inset 1px 1px 0px rgba(255,255,255,0.25), /* highlight */
