--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ const BASE_URL = "https://adventofcode.com/2023/day"
 const CHRISTMAS_API = "https://img.freepik.com/free-photo/christmas-holidays-composition_658428-348.jpg?size=626&ext=jpg&ga=GA1.1.447831323.1701279307&semt=sph"
 
 const SNOWFLAKES = ["❅","❅","❅","❄", "❅","❅","❄","❄", "❅","❄","❅","❄"]
+export const GITHUB_REPOSITORY_URL = 'https://github.com/cpl121/adventOfCode2023/blob/main/src/challenges';
 ---
 
 <Layout title="Welcome to Advent of Code 2023">
@@ -20,14 +21,15 @@ const SNOWFLAKES = ["❅","❅","❅","❄", "❅","❅","❄","❄", "❅","❄
 				<div class="snowflake">
 					{snow}
 				</div>
-			)}
+				)}
 		</div>
 		<h1><span class="inline-block text-transparent bg-clip-text">Welcome to Advent of Code 2023</span></h1>
 		<ul role="list" class="grid justify-items-center grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6">
 			{CALENDAR.map(async (_, index) => 
 				<Card href={`${BASE_URL}/${index + 1}`} day={index + 1} image={CHRISTMAS_API} />
-			)}
+				)}
 		</ul>
+		<p><a href={GITHUB_REPOSITORY_URL} target="_blank" rel="noopener noreferrer">Link to my solutions</a></p>
 	</main>
 </Layout>
 
@@ -47,7 +49,15 @@ const SNOWFLAKES = ["❅","❅","❅","❄", "❅","❅","❄","❄", "❅","❄
 		font-weight: 700;
 		line-height: 1;
 		text-align: center;
-		margin-bottom: 1em;
+		margin-bottom: 0.5em;
+		margin-top: 0.5em;
+	}
+
+	p {
+		font-size: 2rem;
+		font-weight: 700;
+		line-height: 1;
+		text-align: center;
 		margin-top: 1em;
 	}
 
